// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`markdownToJsDoc('# Description\\nThis is the description content.\\nIt spans multiple lines.', { moduleName: 'TestModule', generatorPath: RelFileClass { segments: [ 'src' ], f...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
# Description
This is the description content.
It spans multiple lines.
....................................................
{
  moduleName: 'TestModule',
  generatorPath: RelFileClass {
    segments: [ 'src' ],
    fileName: FileName {
      stem: 'gen',
      extension: '.ts',
      _tag: 'FileName'
    },
    _tag: 'FsPathRelFile'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
/**
* ====================================================================================
* GENERATED FILE - DO NOT EDIT MANUALLY
* ====================================================================================
*
* Generated by: Graffle Code Generator
* Source: ./src/gen.ts
*
* @module TestModule
*
* @description
* This is the description content.
* It spans multiple lines.
*/
╚══════════════════════════════════════════════════╝"
`;

exports[`markdownToJsDoc('', { moduleName: 'TestModule', generatorPath: RelFileClass { segments: [], fileName...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS

....................................................
{
  moduleName: 'TestModule',
  generatorPath: RelFileClass {
    segments: [],
    fileName: FileName {
      stem: 'gen',
      extension: '.ts',
      _tag: 'FileName'
    },
    _tag: 'FsPathRelFile'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
/**
* ====================================================================================
* GENERATED FILE - DO NOT EDIT MANUALLY
* ====================================================================================
*
* Generated by: Graffle Code Generator
* Source: ./gen.ts
*
* @module TestModule
*/
╚══════════════════════════════════════════════════╝"
`;

exports[`markdownToJsDoc('Summary here.\\n\\n# Remarks\\nImportant implementation notes.\\n- Point one\\n- Poi..., { moduleName: 'TestModule', generatorPath: RelFileClass { segments: [], fileName...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Summary here.

# Remarks
Important implementation notes.
- Point one
- Point two
....................................................
{
  moduleName: 'TestModule',
  generatorPath: RelFileClass {
    segments: [],
    fileName: FileName {
      stem: 'gen',
      extension: '.ts',
      _tag: 'FileName'
    },
    _tag: 'FsPathRelFile'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
/**
* ====================================================================================
* GENERATED FILE - DO NOT EDIT MANUALLY
* ====================================================================================
*
* Generated by: Graffle Code Generator
* Source: ./gen.ts
*
* @module TestModule
*
* Summary here.
*
* @remarks
* Important implementation notes.
* - Point one
* - Point two
*/
╚══════════════════════════════════════════════════╝"
`;

exports[`markdownToJsDoc('Summary.\\n\\n# Example\\n## Basic Usage\\n\`\`\`typescript\\nconst x = 1\\n\`\`\`\\n\\n## Ad..., { moduleName: 'TestModule', generatorPath: RelFileClass { segments: [], fileName...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Summary.

# Example
## Basic Usage
\`\`\`typescript
const x = 1
\`\`\`

## Advanced Usage
\`\`\`typescript
const y = complex()
\`\`\`
....................................................
{
  moduleName: 'TestModule',
  generatorPath: RelFileClass {
    segments: [],
    fileName: FileName {
      stem: 'gen',
      extension: '.ts',
      _tag: 'FileName'
    },
    _tag: 'FsPathRelFile'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
/**
* ====================================================================================
* GENERATED FILE - DO NOT EDIT MANUALLY
* ====================================================================================
*
* Generated by: Graffle Code Generator
* Source: ./gen.ts
*
* @module TestModule
*
* Summary.
*
* @example Basic Usage
* \`\`\`typescript
* const x = 1
* \`\`\`
* @example Advanced Usage
* \`\`\`typescript
* const y = complex()
* \`\`\`
*/
╚══════════════════════════════════════════════════╝"
`;

exports[`markdownToJsDoc('Summary.\\n\\n# See Also\\n- [MDN Docs](https://developer.mozilla.org)\\n- [TypeScr..., { moduleName: 'TestModule', generatorPath: RelFileClass { segments: [], fileName...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
Summary.

# See Also
- [MDN Docs](https://developer.mozilla.org)
- [TypeScript Handbook](https://www.typescriptlang.org/docs)
....................................................
{
  moduleName: 'TestModule',
  generatorPath: RelFileClass {
    segments: [],
    fileName: FileName {
      stem: 'gen',
      extension: '.ts',
      _tag: 'FileName'
    },
    _tag: 'FsPathRelFile'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
/**
* ====================================================================================
* GENERATED FILE - DO NOT EDIT MANUALLY
* ====================================================================================
*
* Generated by: Graffle Code Generator
* Source: ./gen.ts
*
* @module TestModule
*
* Summary.
*
* @see {@link https://developer.mozilla.org | MDN Docs}
* @see {@link https://www.typescriptlang.org/docs | TypeScript Handbook}
*/
╚══════════════════════════════════════════════════╝"
`;

exports[`markdownToJsDoc('This is a simple summary.', { moduleName: 'TestModule', generatorPath: RelFileClass { segments: [], fileName...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
This is a simple summary.
....................................................
{
  moduleName: 'TestModule',
  generatorPath: RelFileClass {
    segments: [],
    fileName: FileName {
      stem: 'generator',
      extension: '.ts',
      _tag: 'FileName'
    },
    _tag: 'FsPathRelFile'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
/**
* ====================================================================================
* GENERATED FILE - DO NOT EDIT MANUALLY
* ====================================================================================
*
* Generated by: Graffle Code Generator
* Source: ./generator.ts
*
* @module TestModule
*
* This is a simple summary.
*/
╚══════════════════════════════════════════════════╝"
`;

exports[`markdownToJsDoc('This is the summary.\\n\\n# Description\\nDetailed description here.\\n\\n# Remarks\\..., { moduleName: 'TestModule', generatorPath: RelFileClass { segments: [ 'src', 'ge...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
This is the summary.

# Description
Detailed description here.

# Remarks
Some remarks about usage.

# Example
## Usage
\`\`\`typescript
doSomething()
\`\`\`

# See Also
- [Docs](https://example.com)
....................................................
{
  moduleName: 'TestModule',
  generatorPath: RelFileClass {
    segments: [ 'src', 'generators' ],
    fileName: FileName {
      stem: 'main',
      extension: '.ts',
      _tag: 'FileName'
    },
    _tag: 'FsPathRelFile'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
/**
* ====================================================================================
* GENERATED FILE - DO NOT EDIT MANUALLY
* ====================================================================================
*
* Generated by: Graffle Code Generator
* Source: ./src/generators/main.ts
*
* @module TestModule
*
* This is the summary.
*
* @description
* Detailed description here.
*
* @remarks
* Some remarks about usage.
*
* @example Usage
* \`\`\`typescript
* doSomething()
* \`\`\`
*
* @see {@link https://example.com | Docs}
*/
╚══════════════════════════════════════════════════╝"
`;
